# salesforce-docs-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.example
dags/: salesforce_docs_refresh_dag.py
docs/: architecture.md
examples/: query_identity_resolution.json
queries/: eval_questions.json
scrapy_project/: scrapy.cfg
scrapy_project/salesforce_docs_spider/: __init__.py  settings.py
scrapy_project/salesforce_docs_spider/spiders/: salesforce_docs.py
scripts/: evaluate_retrieval.py
src/salesforce_docs_rag/: __init__.py  config.py  io.py  logging.py
src/salesforce_docs_rag/answering/: __init__.py  synthesizer.py
src/salesforce_docs_rag/api/: __init__.py  dependencies.py  main.py  schemas.py
src/salesforce_docs_rag/chunking/: __init__.py  section_chunker.py
src/salesforce_docs_rag/crawler/: __init__.py  classification.py  html_extractor.py
src/salesforce_docs_rag/embeddings/: __init__.py  base.py  factory.py  local.py  openai_provider.py
src/salesforce_docs_rag/ingestion/: __init__.py  chunk_documents.py  index_documents.py  run_crawl.py
src/salesforce_docs_rag/models/: __init__.py  documents.py
src/salesforce_docs_rag/reranking/: __init__.py  hybrid.py
src/salesforce_docs_rag/storage/: __init__.py  weaviate_store.py
tests/: test_answer_synthesizer.py  test_api_schemas.py  test_chunking.py  test_classification.py  test_embeddings.py  test_html_extractor.py  test_hybrid_reranker.py  test_salesforce_docs_api_crawl.py
